# forge

./: .pre-commit-config.yaml  CHANGELOG.md  mkdocs.yml  pyproject.toml
src/forge/: cli.py
tests/: test_cli.py
