[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

###################
## PROJECT SETUP ##
###################
[project]
name = "forge"
description = "Machine Learning library build on top of Keras 3.0"
authors = [
    { name = "Bart Keulen", email = "info@keulen.me" }
]
maintainers = [
    { name = "Bart Keulen", email = "info@keulen.me" }
]
requires-python = ">=3.11"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = []

[project.urls]
Documentation = "https://bartkeulen.github.io/forge"
Repository = "https://github.com/bartkeulen/forge"
Issues = "https://github.com/bartkeulen/forge/issues"
Changelog = "https://github.com/bartkeulen/forge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-macros-plugin",
]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "ipython",
    "ipdb",
    "forge[docs, test]",
]

[tool.hatch.version]
path = "src/forge/__init__.py"

[project.scripts]
forge = "forge.cli:main"

#########################
## TOOL CONFIGURATIONS ##
#########################
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".github",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "notebooks"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--import-mode=importlib",
    "--pdbcls=IPython.terminal.debugger:Pdb",
    "-p no:legacypath",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    "def __repr__",

    # Don't complain about missing debug-only code:
    "if self.debug:",
    "if settings.DEBUG",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about protocols or abstract methods, they aren't run:
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

ignore_errors = true
